--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
             <artifactId>testng</artifactId>
             <version>6.14.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.2.17.Final</version>
+        </dependency>
+
     </dependencies>
 
 </project>
